--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hola Mundo</title>
+    <title>Prueba cambios</title>
 </head>
 <body>
-    <h1>Hola Mundo Dev</h1>
+    <h1>probando cambios</h1>
 </body>
-</html>
+</html> 
