--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prueba cambios</title>
+    <title>Prueba cambios nueva rama</title>
 </head>
 <body>
-    <h1>probando cambio s</h1>
+    <h1>probando cambios 2</h1>
 </body>
 </html> 
